--- a/rebased_package_config.json
+++ b/rebased_package_config.json
@@ -3,259 +3,211 @@
   "packages": [
     {
       "name": "_fe_analyzer_shared",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/_fe_analyzer_shared",
+      "rootUri": "../dart-sdk-stable/pkg/_fe_analyzer_shared",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "_js_interop_checks",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/_js_interop_checks",
+      "rootUri": "../dart-sdk-stable/pkg/_js_interop_checks",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "args",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/args",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/args-2.3.0",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "async",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/async",
-      "packageUri": "lib/",
-      "languageVersion": "2.12"
-    },
-    {
-      "name": "async_helper",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/async_helper",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/async-2.8.2",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "bazel_worker",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/bazel_worker",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/bazel_worker-1.0.1",
       "packageUri": "lib/",
-      "languageVersion": "2.12"
+      "languageVersion": "2.14"
     },
     {
       "name": "build_integration",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/build_integration",
+      "rootUri": "../dart-sdk-stable/pkg/build_integration",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "charcode",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/charcode",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/charcode-1.3.1",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "cli_util",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/cli_util",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/cli_util-0.3.5",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "collection",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/collection",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/collection-1.15.0",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "compiler",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/compiler",
+      "rootUri": "../dart-sdk-stable/pkg/compiler",
       "packageUri": "lib/",
       "languageVersion": "2.6"
     },
     {
-      "name": "convert",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/convert",
-      "packageUri": "lib/",
-      "languageVersion": "2.12"
-    },
-    {
       "name": "crypto",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/crypto",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/crypto-3.0.1",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "dart2js_info",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/dart2js_info",
+      "rootUri": "../dart-sdk-stable/pkg/dart2js_info",
       "packageUri": "lib/",
-      "languageVersion": "2.3"
+      "languageVersion": "2.11"
     },
     {
       "name": "dev_compiler",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/dev_compiler",
+      "rootUri": "../dart-sdk-stable/pkg/dev_compiler",
       "packageUri": "lib/",
-      "languageVersion": "2.12"
-    },
-    {
-      "name": "expect",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/expect",
-      "packageUri": "lib/",
-      "languageVersion": "2.12"
+      "languageVersion": "2.15"
     },
     {
       "name": "fixnum",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/fixnum",
-      "packageUri": "lib/",
-      "languageVersion": "2.10"
-    },
-    {
-      "name": "front_end",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/front_end",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/fixnum-1.0.0",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
+      "name": "front_end",
+      "rootUri": "../dart-sdk-stable/pkg/front_end",
+      "packageUri": "lib/",
+      "languageVersion": "2.13"
+    },
+    {
       "name": "frontend_server",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/frontend_server",
+      "rootUri": "file:///Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/frontend_server",
       "packageUri": "lib/",
       "languageVersion": "2.7"
     },
     {
       "name": "http_parser",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/http_parser",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/http_parser-4.0.0",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "js_ast",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/js_ast",
+      "rootUri": "../dart-sdk-stable/pkg/js_ast",
       "packageUri": "lib/",
       "languageVersion": "2.10"
     },
     {
       "name": "js_runtime",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/js_runtime",
+      "rootUri": "../dart-sdk-stable/pkg/js_runtime",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "kernel",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/kernel",
-      "packageUri": "lib/",
-      "languageVersion": "2.12"
-    },
-    {
-      "name": "logging",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/logging",
-      "packageUri": "lib/",
-      "languageVersion": "2.12"
-    },
-    {
-      "name": "matcher",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/matcher",
+      "rootUri": "file:///Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/kernel",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "meta",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/meta",
-      "packageUri": "lib/",
-      "languageVersion": "2.12"
-    },
-    {
-      "name": "mime",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/mime",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/meta-1.7.0",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "package_config",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg_tested/package_config",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/package_config-2.0.2",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "path",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/path",
-      "packageUri": "lib/",
-      "languageVersion": "2.12"
-    },
-    {
-      "name": "pedantic",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/pedantic",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/path-1.8.1",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "protobuf",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/protobuf/protobuf",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/protobuf-2.0.1",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "shelf",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/shelf",
-      "packageUri": "lib/",
-      "languageVersion": "2.12"
-    },
-    {
-      "name": "shelf_static",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/shelf_static",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/shelf-1.2.0",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "source_maps",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/source_maps",
-      "packageUri": "lib/",
-      "languageVersion": "2.10"
-    },
-    {
-      "name": "source_span",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/source_span",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/source_maps-0.10.10",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
+      "name": "source_span",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/source_span-1.8.2",
+      "packageUri": "lib/",
+      "languageVersion": "2.14"
+    },
+    {
       "name": "stack_trace",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/stack_trace",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/stack_trace-1.10.0",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "stream_channel",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/stream_channel",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/stream_channel-2.1.0",
       "packageUri": "lib/",
-      "languageVersion": "2.10"
+      "languageVersion": "2.12"
     },
     {
       "name": "string_scanner",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/string_scanner",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/string_scanner-1.1.0",
       "packageUri": "lib/",
-      "languageVersion": "2.10"
+      "languageVersion": "2.12"
     },
     {
       "name": "term_glyph",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/term_glyph",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/term_glyph-1.2.0",
       "packageUri": "lib/",
-      "languageVersion": "2.10"
+      "languageVersion": "2.12"
     },
     {
       "name": "typed_data",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/typed_data",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/typed_data-1.3.0",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "usage",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/usage",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/usage-4.0.2",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
     {
       "name": "vm",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/pkg/vm",
+      "rootUri": "../dart-sdk-stable/pkg/vm",
       "packageUri": "lib/",
-      "languageVersion": "2.12"
+      "languageVersion": "2.15"
     },
     {
       "name": "yaml",
-      "rootUri": "/Users/lixin/Documents/FlutterWorkspace/dart-sdk-stable/third_party/pkg/yaml",
+      "rootUri": "file:///Users/lixin/.pub-cache/hosted/pub.flutter-io.cn/yaml-3.1.0",
       "packageUri": "lib/",
       "languageVersion": "2.12"
     },
@@ -266,7 +218,7 @@
       "languageVersion": "2.12"
     }
   ],
-  "generated": "2021-11-03T06:24:49.107961Z",
+  "generated": "2022-02-16T07:26:32.661156Z",
   "generator": "pub",
-  "generatorVersion": "2.14.4"
+  "generatorVersion": "2.16.1"
 }
