--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,15 @@
 name: aspect_frontend_server
-description: frontend server for flutter with AOP(aspect oriented programming)
-version: 0.0.1
-homepage: https://github.com/lancexin/aspect_frontend_server
+description: A resident kernel compiler
+# This package is not intended for consumption on pub.dev. DO NOT publish.
+publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  args: ^2.3.0
-  frontend_server: any
-  kernel: any
-  
+  frontend_server:
+    path: ../dart_sdk/sdk/pkg/frontend_server
+
+dev_dependencies:
+  mockito: any
+  test: any
