--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,26 @@
-name: aspect_frontend_server
-description: A resident kernel compiler
-# This package is not intended for consumption on pub.dev. DO NOT publish.
-publish_to: none
+name: dydart
+description: A sample command-line application.
+version: 1.0.0
+# homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.18.0-44.1.beta <3.0.0'
 
 dependencies:
+  front_end: any
+  _fe_analyzer_shared: any
+  frontend_server: any
+  meta: any
+  args: ^2.0.0
+  test: ^1.3.4
+
+
+dependency_overrides:
+  _fe_analyzer_shared:
+    path: ../dart_sdk/sdk/pkg/_fe_analyzer_shared
+  front_end:
+    path: ../dart_sdk/sdk/pkg/front_end
   frontend_server:
     path: ../dart_sdk/sdk/pkg/frontend_server
-
-dev_dependencies:
-  mockito: any
-  test: any
+  meta:
+    path: ../dart_sdk/sdk/pkg/meta
