--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,52 @@
-name: dydart
+name: aspect_frontend_server
 description: A sample command-line application.
 version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.18.0-44.1.beta <3.0.0'
+  sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
   front_end: any
   _fe_analyzer_shared: any
+  _js_interop_checks: any
   frontend_server: any
+  build_integration: any
+  js_shared: any
+  js_runtime: any
+  js_ast: any
+  compiler: any
+  dev_compiler: any
   meta: any
-  args: ^2.0.0
-  test: ^1.3.4
-
+  args: any
+  vm: any
+  kernel: any
 
 dependency_overrides:
   _fe_analyzer_shared:
     path: ../dart_sdk/sdk/pkg/_fe_analyzer_shared
+  _js_interop_checks:
+    path: ../dart_sdk/sdk/pkg/_js_interop_checks
   front_end:
     path: ../dart_sdk/sdk/pkg/front_end
+  build_integration:
+    path: ../dart_sdk/sdk/pkg/build_integration
   frontend_server:
     path: ../dart_sdk/sdk/pkg/frontend_server
+  compiler:
+    path: ../dart_sdk/sdk/pkg/compiler
+  dev_compiler:
+    path: ../dart_sdk/sdk/pkg/dev_compiler
+  js_shared:
+    path: ../dart_sdk/sdk/pkg/js_shared
+  js_runtime:
+    path: ../dart_sdk/sdk/pkg/js_runtime
+  js_ast:
+    path: ../dart_sdk/sdk/pkg/js_ast
   meta:
     path: ../dart_sdk/sdk/pkg/meta
+  vm:
+    path: ../dart_sdk/sdk/pkg/vm
+  kernel:
+    path: ../dart_sdk/sdk/pkg/kernel
+
