--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.18.6 <4.0.0'
 
 dependencies:
   front_end: any
@@ -21,6 +21,7 @@ dependencies:
   args: any
   vm: any
   kernel: any
+  dart2js_info: any
 
 dependency_overrides:
   _fe_analyzer_shared:
@@ -49,4 +50,5 @@ dependency_overrides:
     path: ../dart_sdk/sdk/pkg/vm
   kernel:
     path: ../dart_sdk/sdk/pkg/kernel
-
+  dart2js_info: 
+    path: ../dart_sdk/sdk/pkg/dart2js_info
